# metaX-inference

./: .gitignore  AGENT.md  LICENSE  README.md  TEST_RESULTS.md  pyproject.toml  requirements-metax.txt
configs/: acceptance_baseline.json  qwen36-27b-awq.yaml  qwen36-27b-mtp-bf16.yaml  qwen36-c8160-tuned.yaml  qwen36-phase1-tuned.yaml  qwen36-phase3-mtp.yaml  trustclaw-metax-vllm.json
docs/: CCF_PROJECT_BRIEF.md  CCF_TECH_SUMMARY.md  CCF_TEST_REPORT.md  DEPLOYMENT.md  DEVELOPMENT_LOG.md  GITLINK_ISSUES.md  REFERENCES.md  SUBMISSION.md
metax_kernels/: __init__.py  fast_model.py  mcoplib_bridge.py  registry.py
scripts/: bench_acceptance.py  bench_mtp_bf16.sh  bench_qwen36.py  build_metax_full_image.sh  check_mtp_head.py  deploy_trustclaw_metax.sh  deploy_unsloth_studio.sh  deploy_unsloth_studio_gguf.sh  diag_t0.sh  download_qwen36_mtp_bf16.sh  eval_production_qa.py  export_bench_bundle.sh  export_ccf_pdfs.sh  graft_mtp_bf16_to_awq.py  metax_env.sh  metax_paste_and_run.sh  metax_sgpu_full_gpu.sh  mtp80_best_c8.sh  mtp80_control_c8.sh  parse_bench_results.py  phase0_sweep.sh  phase3_warmup_retest.sh  print_one_liners.sh  profile_decode.py  quantize-qwen36.py  quick_smoke_metax.sh  remote_run_all_benches.sh  remote_sync_repo.sh  remote_test_scheme_a.sh  remote_test_scheme_b.sh  remote_test_vllm_fix.sh  retest_c8160_best.sh  retest_phase0.sh  run_op_bench.sh  run_phase1_bench.sh  run_phase1_concurrent_bench.sh  run_phase3_mtp_bench.sh  run_production_qa_eval.sh  serve_qwen36_metax.sh  stop_trustclaw_metax.sh  (+16 more)
tests/: test_bench_acceptance.py  test_check_mtp_head.py  (+3 more)
(+35 files in other folders)
